--- a/hw3/index.html
+++ b/hw3/index.html
@@ -631,6 +631,15 @@
 			</table>
 		</div>
 
+		<div>
+			<p>
+				
+			</p>
+			<h2>Final Reflections</h2>
+			<p>
+				Throughout the project, we met up both in person and online to discuss different approaches to the tasks. We divided up the work to parallelize our process side-by-side and reviewed each other's tasks to make sure that we understood the whole project together. The concepts taught in this homework are new to both of us, so it was helpful to be able to work through it together and debug. Even though we were both caught up with midterms and other projects, we made sure to maintain a clear line of communication to share insights whenever something was unclear. Not only did we learn a lot about ray tracing and illumination, both conceptually and technically, but we also improved our teamwork skills. We even got accustomed to more efficient time management towards the end because of the longer rendering times!
+				</p>
+		</div>
 
 		</div>
 	</body>
