fixing image paths

--- a/184project/index.html
+++ b/184project/index.html
@@ -51,7 +51,7 @@
 		<p>Below is an image depicting tea plants with young leaves silhouetted against a vibrant orange and yellow sunset.</p>
 
 		<figure>
-			<img src="photo.png" alt="Image of tea plants" style="width:50%"/>
+			<img src="photo.jpg" alt="Image of tea plants" style="width:50%"/>
 			<figcaption>Tea plants under a sunset</figcaption>
 		</figure>
 
@@ -60,7 +60,7 @@
 
 
 		<figure>
-			<img src="imagen.png" alt="Imagen Impressionist Render" style="width:50%"/>
+			<img src="imagen.jpg" alt="Imagen Impressionist Render" style="width:50%"/>
 			<figcaption>Imagen Impressionist Render</figcaption>
 		</figure>
 
