fixing website link

--- a/184project/index.html
+++ b/184project/index.html
@@ -32,7 +32,7 @@
 
 		<br>
 
-		Link to webpage: https://cal-cs184-student.github.io/hw-webpages-swetha-inas-1/ <a href="https://cal-cs184-student.github.io/hw-webpages-swetha-inas-1/">cs184.eecs.berkeley.edu/sp25</a>
+		Link to webpage: <a href="https://cal-cs184-student.github.io/hw-webpages-swetha-inas-1/"></a>
 
 		<br>
 
