--- a/184project/index.html
+++ b/184project/index.html
@@ -80,8 +80,8 @@
 		<b>What we plan to deliver and what we hope to deliver:</b>
 	
 		<ul>
-			<li>1. We plan to deliver a tool that takes a realistic image as input and outputs an impressionistic version of that image as output. While our deliverable most likely won't create impressionistic art as good as Monet's, we hope to still create a mostly deterministic tool (so not too much AI generation) that creates a non-photorealistic image that has some properties of impressionism like visible brush strokes and simplified form. Some flaws might include altering details in the input scene, coarse brush strokes, etc.</li> 
-			<li>2. If things go well, our generated art should have more properties of impressionism like non-blended colors and “noise” (either in the form of blur or brush stroke jitter) often seen in real paintings. Ideally, it should still look like it captured the same scene as the one inputted to the tool.</li>
+			<li>We plan to deliver a tool that takes a realistic image as input and outputs an impressionistic version of that image as output. While our deliverable most likely won't create impressionistic art as good as Monet's, we hope to still create a mostly deterministic tool (so not too much AI generation) that creates a non-photorealistic image that has some properties of impressionism like visible brush strokes and simplified form. Some flaws might include altering details in the input scene, coarse brush strokes, etc.</li> 
+			<li>If things go well, our generated art should have more properties of impressionism like non-blended colors and “noise” (either in the form of blur or brush stroke jitter) often seen in real paintings. Ideally, it should still look like it captured the same scene as the one inputted to the tool.</li>
 		</ul>
 
 
