--- a/184project/index.html
+++ b/184project/index.html
@@ -130,10 +130,10 @@
 		<h2>Resources</h2>
 		
 		<ul>
-			<li>Stroke based rendering: <a href="https://www.cs.ucdavis.edu/~ma/SIGGRAPH02/course23/notes/S02c23_3.pdf"></a></li>
-			<li>Characteristics of impressionism for reference: <a href="https://arthistorywithalder.com/impressionism-art-characteristics/"></a></li>
-			<li>PBRT to refer to in times of crisis: <a href="https://www.pbrt.org/"></a></li>
-			<li>OpenCV: <a href="https://opencv.org/"></a></li>
+			<li>Stroke based rendering: <a href="https://www.cs.ucdavis.edu/~ma/SIGGRAPH02/course23/notes/S02c23_3.pdf">https://www.cs.ucdavis.edu/~ma/SIGGRAPH02/course23/notes/S02c23_3.pdf</a></li>
+			<li>Characteristics of impressionism for reference: <a href="https://arthistorywithalder.com/impressionism-art-characteristics/">https://arthistorywithalder.com/impressionism-art-characteristics/</a></li>
+			<li>PBRT to refer to in times of crisis: <a href="https://www.pbrt.org/">https://www.pbrt.org/</a></li>
+			<li>OpenCV: <a href="https://opencv.org/">https://opencv.org/</a></li>
 		</ul>
 
 		</div>
