--- a/184project/index.html
+++ b/184project/index.html
@@ -87,9 +87,9 @@
 
 		<h2>Schedule</h2>
 
-		<b>Week 1:</b>
-
-		<p>Create Project Skeleton: we can use homework templating that already creates the render screen and the ability to write RGB colors to the screen buffer. Overall, this task includes:<p>
+		<b>Week 1: Create Project Skeleton</b>
+			
+		<p>We can use homework templating that already creates the render screen and the ability to write RGB colors to the screen buffer. Overall, this task includes:<p>
 
 		<ul>
 			<li>The ability to upload an input image</li>
@@ -97,9 +97,7 @@
 			<li>Outputs the same input image with some noise (to show we processed the image)</li>
 		</ul>
 
-		<b>Week 2:</b>
-
-		<p>Brush stroke pipeline</p>
+		<b>Week 2: Brush stroke pipeline</b>
 
 		<ul>
 			<li>Read the image NxN pixels at a time</li>
@@ -108,9 +106,7 @@
 			<li>Use splines to model large components(segments) of color, similar to how a SAM mask works</li>
 		</ul>
 
-		<b>Week 3:</b>
-
-		<p>Color pipeline:</p>
+		<b>Week 3: Color pipeline:</b>
 
 		<ul>
 			<li>Given a data structure representation of all the brush strokes in the image, add noise and monet-style blurring, gradients, and other determined modifications to the brush strokes</li>
@@ -118,9 +114,7 @@
 			<li>Any final post-image processing / blurring to make the overall image more consistent in terms of color and frequency.</li>
 		</ul>
 
-		<b>Week 4:</b>
-
-		<b>Fine Tuning:</b>
+		<b>Week 4:Fine Tuning:</b>
 		
 		<ul>
 			<li>Edit parts of the pipeline to make the images as realistic as possible</li>
