--- a/184project/index.html
+++ b/184project/index.html
@@ -27,7 +27,7 @@
 	</head>
 	<body>
 		<div class="container">
-		<h1>CS184/284A Spring 2025 Final Project</h1>
+		<h1>Monet-ification</h1>
 		<div style="text-align: center;">Names: Rohan Aanegola, Swetha Rajkumar, Inas Zulaikha Anwar, Mihir Rao</div>
 
 		<br>
